initial changes to layout

--- a/index.html
+++ b/index.html
@@ -6,9 +6,24 @@
         <div class="container">
             <div>
                 <h3>HOME</h3>
+                <div class="score"id="score-home">
+
+                </div>
+                <div class="score-buttons">
+                    <button id="point-1-home">1</button>
+                    <button id="point-2-home">2</button>
+                    <button id="point-3-home">3</button>
+                </div>
             </div>
             <div>
                 <h3>GUEST</h3>
+                <div class="score" id="score-guest">
+                </div>
+                <div class="score-buttons">
+                    <button id="point-1-guest">1</button>
+                    <button id="point-2-guest">2</button>
+                    <button id="point-3-guest">3</button>
+                </div>
             </div>
         </div>
         <script src="index.js"></script>
