Reorg index.html to make score display better

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
         <div class="container">
             <div>
                 <h3>HOME</h3>
-                <div class="score-box"id="score-home">
-                    <div class="score">1</div>
+                <div class="score-box">
+                    <div class="score" id="score-home">0</div>
                 </div>
                 <div class="score-buttons">
                     <button id="point-1-home">1</button>
@@ -17,8 +17,8 @@
             </div>
             <div>
                 <h3>GUEST</h3>
-                <div class="score-box" id="score-guest">
-                    <div class="score"></div>
+                <div class="score-box">
+                    <div class="score" id="score-guest">0</div>
                 </div>
                 <div class="score-buttons">
                     <button id="point-1-guest">1</button>
