Add js code and wire up buttons

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
             <div>
                 <h3>HOME</h3>
                 <div class="score-box">
-                    <div class="score" id="score-home">0</div>
+                    <div class="score" id="score-home"></div>
                 </div>
                 <div class="score-buttons">
                     <button id="point-1-home">1</button>
@@ -18,7 +18,7 @@
             <div>
                 <h3>GUEST</h3>
                 <div class="score-box">
-                    <div class="score" id="score-guest">0</div>
+                    <div class="score" id="score-guest"></div>
                 </div>
                 <div class="score-buttons">
                     <button id="point-1-guest">1</button>
